--- a/Credit-Cost.css
+++ b/Credit-Cost.css
@@ -1,10 +1,10 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 730px;
+  min-height: 827px;
 }
 
 .u-section-1 .u-layout-wrap-1 {
   width: 1193px;
-  margin: 17px -27px;
+  margin: 0 -26px 60px;
 }
 
 .u-section-1 .u-image-1 {
@@ -18,7 +18,7 @@
 }
 
 .u-section-1 .u-layout-cell-2 {
-  min-height: 706px;
+  min-height: 767px;
 }
 
 .u-section-1 .u-container-layout-2 {
@@ -26,7 +26,8 @@
 }
 
 .u-section-1 .u-text-1 {
-  margin: 24px auto 0 107px;
+  font-size: 2.25rem;
+  margin: 24px auto 0 54px;
 }
 
 .u-section-1 .u-text-2 {
@@ -65,7 +66,7 @@
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 556px;
+    min-height: 604px;
   }
 
   .u-section-1 .u-text-2 {
@@ -145,5 +146,189 @@
 
   .u-section-1 .u-image-1 {
     min-height: 402px;
+  }
+
+  .u-section-1 .u-text-1 {
+    font-size: 1.875rem;
+  }
+} .u-section-2 {
+  min-height: 318px;
+}
+
+.u-section-2 .u-sheet-1 {
+  min-height: 1043px;
+}
+
+.u-section-2 .u-layout-wrap-1 {
+  width: 1140px;
+  margin: 0 -10px 25px auto;
+}
+
+.u-section-2 .u-layout-cell-1 {
+  min-height: 1018px;
+}
+
+.u-section-2 .u-container-layout-1 {
+  padding: 2px 52px 0;
+}
+
+.u-section-2 .u-icon-1 {
+  height: 48px;
+  width: 48px;
+  background-image: none;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+.u-section-2 .u-text-1 {
+  margin: 78px 1px 0 15px;
+}
+
+.u-section-2 .u-text-2 {
+  font-size: 1.25rem;
+  margin: 28px 9px 0 0;
+}
+
+.u-section-2 .u-text-3 {
+  font-size: 1.25rem;
+  margin: 54px 1px 0 8px;
+}
+
+.u-section-2 .u-layout-cell-2 {
+  min-height: 1018px;
+}
+
+.u-section-2 .u-container-layout-2 {
+  padding: 21px 0;
+}
+
+.u-section-2 .u-image-1 {
+  width: 392px;
+  height: 262px;
+  margin: 30px auto 0;
+}
+
+.u-section-2 .u-image-2 {
+  height: 362px;
+  width: 582px;
+  margin: 77px 0 0 auto;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 203px;
+  }
+
+  .u-section-2 .u-layout-wrap-1 {
+    width: 940px;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 839px;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-3 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    background-position: 50% 50%;
+    min-height: 839px;
+  }
+
+  .u-section-2 .u-image-2 {
+    height: 302px;
+    width: 486px;
+  }
+}
+
+@media (max-width: 991px) {
+   .u-section-2 {
+    min-height: 66px;
+  }
+
+  .u-section-2 .u-sheet-1 {
+    min-height: 77px;
+  }
+
+  .u-section-2 .u-layout-wrap-1 {
+    width: 720px;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 643px;
+  }
+
+  .u-section-2 .u-image-1 {
+    width: 372px;
+    height: 249px;
+  }
+
+  .u-section-2 .u-image-2 {
+    height: 231px;
+    width: 372px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-2 .u-layout-wrap-1 {
+    width: 540px;
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  .u-section-2 .u-text-2 {
+    font-size: 1rem;
+  }
+
+  .u-section-2 .u-text-3 {
+    font-size: 1rem;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 933px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-layout-wrap-1 {
+    width: 340px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 587px;
+  }
+
+  .u-section-2 .u-image-1 {
+    width: 340px;
+    height: 228px;
+  }
+
+  .u-section-2 .u-image-2 {
+    height: 211px;
+    width: 340px;
   }
 }
