--- a/nicepage.css
+++ b/nicepage.css
@@ -41357,42 +41357,72 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-text-1 {
-  margin: 59px auto 0 91px;
+  margin: 64px auto 0 19px;
+}
+
+.u-header .u-list-1 {
+  width: 1017px;
+  margin: 11px auto 45px 0;
+}
+
+.u-header .u-repeater-1 {
+  min-height: 53px;
+  grid-template-columns: calc(20% - 4px) calc(20% - 4px) calc(20% - 4px) calc(20% - 4px) calc(20% - 4px);
+  grid-gap: 5px 5px;
+}
+
+.u-header .u-container-layout-1 {
+  padding: 10px 73px 10px 10px;
 }
 
 .u-header .u-btn-1 {
   border-style: solid;
   font-size: 1.25rem;
-  margin: -72px 283px 0 auto;
+  margin: 0 auto 0 0;
   padding: 0;
+}
+
+.u-header .u-container-layout-2 {
+  padding: 10px 73px 10px 10px;
 }
 
 .u-header .u-btn-2 {
   border-style: solid;
   font-size: 1.25rem;
-  margin: -33px 138px 0 auto;
+  margin: 0 auto 0 0;
   padding: 0;
+}
+
+.u-header .u-container-layout-3 {
+  padding: 10px 73px 10px 10px;
 }
 
 .u-header .u-btn-3 {
   border-style: solid;
   font-size: 1.25rem;
-  margin: 0 241px 0 auto;
+  margin: 0 auto 0 0;
   padding: 0;
+}
+
+.u-header .u-container-layout-4 {
+  padding: 10px 73px 10px 10px;
 }
 
 .u-header .u-btn-4 {
   border-style: solid;
   font-size: 1.25rem;
-  margin: -33px 149px 0 auto;
+  margin: 0 auto 0 0;
   padding: 0;
 }
 
+.u-header .u-container-layout-5 {
+  padding: 10px 73px 10px 10px;
+}
+
 .u-header .u-btn-5 {
-  background-image: none;
   border-style: solid;
   font-size: 1.25rem;
-  margin: -67px 62px 60px auto;
+  margin: 0 auto 0 0;
   padding: 0;
 }
 @media (max-width: 1199px) {
@@ -41400,41 +41430,82 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-top: -32px;
   }
 
-  .u-header .u-btn-1 {
-    margin-right: 83px;
+  .u-header .u-list-1 {
+    width: 940px;
   }
 
-  .u-header .u-btn-2 {
-    margin-top: -33px;
-    margin-right: 0;
-  }
-
-  .u-header .u-btn-3 {
-    margin-top: 0;
-    margin-right: 41px;
-  }
-
-  .u-header .u-btn-4 {
-    margin-top: -33px;
-    margin-right: 0;
-  }
-
-  .u-header .u-btn-5 {
-    margin-top: -67px;
-    margin-right: 0;
+  .u-header .u-repeater-1 {
+    min-height: 49px;
   }
 }
 @media (max-width: 991px) {
-  .u-header .u-btn-1 {
-    margin-right: 0;
+  .u-header .u-list-1 {
+    width: 720px;
   }
 
-  .u-header .u-btn-3 {
-    margin-right: 0;
+  .u-header .u-repeater-1 {
+    min-height: 219px;
+    grid-template-columns: calc(33.3333% - 3.33333px) calc(33.3333% - 3.33333px) calc(33.3333% - 3.33333px);
+  }
+
+  .u-header .u-container-layout-1 {
+    padding-right: 30px;
+  }
+
+  .u-header .u-container-layout-2 {
+    padding-right: 30px;
+  }
+
+  .u-header .u-container-layout-3 {
+    padding-right: 30px;
+  }
+
+  .u-header .u-container-layout-4 {
+    padding-right: 30px;
+  }
+
+  .u-header .u-container-layout-5 {
+    padding-right: 30px;
   }
 }
+@media (max-width: 767px) {
+  .u-header .u-list-1 {
+    width: 540px;
+  }
 
+  .u-header .u-repeater-1 {
+    grid-template-columns: calc(50% - 2.5px) calc(50% - 2.5px);
+  }
 
+  .u-header .u-container-layout-1 {
+    padding-right: 10px;
+  }
+
+  .u-header .u-container-layout-2 {
+    padding-right: 10px;
+  }
+
+  .u-header .u-container-layout-3 {
+    padding-right: 10px;
+  }
+
+  .u-header .u-container-layout-4 {
+    padding-right: 10px;
+  }
+
+  .u-header .u-container-layout-5 {
+    padding-right: 10px;
+  }
+}
+@media (max-width: 575px) {
+  .u-header .u-list-1 {
+    width: 340px;
+  }
+
+  .u-header .u-repeater-1 {
+    grid-template-columns: 100%;
+  }
+}
  .u-footer {
   background-image: none;
 }
